# seq2squiggle

./: .gitignore  CONFIG.md  CONTRIBUTING.md  README.md  pyproject.toml
config/: config.yaml
envs/: seq2squiggle.yml
example/: lamda_genome.fasta  lamda_genome_reads.fasta  test.fasta
src/seq2squiggle/: __init__.py  config.yaml  dataloader.py  inference.py  layers.py  model.py  modules.py  preprocess.py  seq2squiggle.py  signal_io.py  standardize-events.py  sweep.yaml  train.py  train_sweep.py  utils.py
