[tool.poetry]
name = "seq2squiggle"
version = "0.1.0"
description = "End-to-end simulation of nanopore sequencing signals with feed-forward transformers"
authors = ["Denis Beslic <beslicd@rki.de>"]
license = "MIT"
homepage = "https://github.com/ZKI-PH-ImageAnalysis/seq2squiggle"
repository = "https://github.com/ZKI-PH-ImageAnalysis/seq2squiggle"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
torch = "2.3"
lightning = "2.2"
pod5 = "^0.3.15"
PyGithub = "^2.3.0"
PyYAML = "^6.0.2"
tqdm = "^4.66.5"
numpy = "^2.0.1"
rich-click = "^1.8.3"
wandb = "^0.17.6"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
pysam = "^0.22.1"
prettytable = "^3.11.0"
transformers = "^4.44.0"
numba = "^0.60.0"
pyslow5 = "^1.2.0"

[tool.poetry.scripts]
seq2squiggle = "seq2squiggle.seq2squiggle:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
